sql_to_mongo_transpiler/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> query
Rule 1     query -> SELECT select_list FROM IDENTIFIER where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
Rule 2     select_list -> STAR
Rule 3     select_list -> column_list
Rule 4     column_list -> column
Rule 5     column_list -> column_list COMMA column
Rule 6     column -> IDENTIFIER
Rule 7     column -> COUNT LPAREN STAR RPAREN
Rule 8     column -> COUNT LPAREN IDENTIFIER RPAREN
Rule 9     column -> MIN LPAREN IDENTIFIER RPAREN
Rule 10    column -> MAX LPAREN IDENTIFIER RPAREN
Rule 11    column -> AVG LPAREN IDENTIFIER RPAREN
Rule 12    column -> SUM LPAREN IDENTIFIER RPAREN
Rule 13    where_clause_opt -> WHERE condition
Rule 14    where_clause_opt -> empty
Rule 15    group_by_clause_opt -> GROUP BY group_list
Rule 16    group_by_clause_opt -> empty
Rule 17    group_list -> IDENTIFIER
Rule 18    group_list -> group_list COMMA IDENTIFIER
Rule 19    having_clause_opt -> HAVING condition
Rule 20    having_clause_opt -> empty
Rule 21    condition -> condition AND condition
Rule 22    condition -> condition OR condition
Rule 23    condition -> comparison
Rule 24    aggregate_expr -> COUNT LPAREN STAR RPAREN
Rule 25    aggregate_expr -> COUNT LPAREN IDENTIFIER RPAREN
Rule 26    aggregate_expr -> MIN LPAREN IDENTIFIER RPAREN
Rule 27    aggregate_expr -> MAX LPAREN IDENTIFIER RPAREN
Rule 28    aggregate_expr -> AVG LPAREN IDENTIFIER RPAREN
Rule 29    aggregate_expr -> SUM LPAREN IDENTIFIER RPAREN
Rule 30    comparison -> IDENTIFIER operator literal
Rule 31    comparison -> aggregate_expr operator literal
Rule 32    comparison -> IDENTIFIER BETWEEN literal AND literal
Rule 33    literal_list -> literal
Rule 34    literal_list -> literal_list COMMA literal
Rule 35    comparison -> IDENTIFIER IN LPAREN literal_list RPAREN
Rule 36    operator -> EQ
Rule 37    operator -> NE
Rule 38    operator -> GT
Rule 39    operator -> LT
Rule 40    operator -> GE
Rule 41    operator -> LE
Rule 42    literal -> NUMBER
Rule 43    literal -> STRING
Rule 44    order_by_clause_opt -> ORDER BY order_list
Rule 45    order_by_clause_opt -> empty
Rule 46    order_list -> order_item
Rule 47    order_list -> order_list COMMA order_item
Rule 48    order_item -> IDENTIFIER
Rule 49    order_item -> IDENTIFIER ASC
Rule 50    order_item -> IDENTIFIER DESC
Rule 51    limit_clause_opt -> LIMIT NUMBER
Rule 52    limit_clause_opt -> empty
Rule 53    empty -> <empty>

Terminals, with rules where they appear

AND                  : 21 32
ASC                  : 49
AVG                  : 11 28
BETWEEN              : 32
BY                   : 15 44
COMMA                : 5 18 34 47
COUNT                : 7 8 24 25
DESC                 : 50
EQ                   : 36
FROM                 : 1
GE                   : 40
GROUP                : 15
GT                   : 38
HAVING               : 19
IDENTIFIER           : 1 6 8 9 10 11 12 17 18 25 26 27 28 29 30 32 35 48 49 50
IN                   : 35
LE                   : 41
LIMIT                : 51
LPAREN               : 7 8 9 10 11 12 24 25 26 27 28 29 35
LT                   : 39
MAX                  : 10 27
MIN                  : 9 26
NE                   : 37
NUMBER               : 42 51
OR                   : 22
ORDER                : 44
RPAREN               : 7 8 9 10 11 12 24 25 26 27 28 29 35
SELECT               : 1
SEMICOLON            : 1
STAR                 : 2 7 24
STRING               : 43
SUM                  : 12 29
WHERE                : 13
error                : 

Nonterminals, with rules where they appear

aggregate_expr       : 31
column               : 4 5
column_list          : 3 5
comparison           : 23
condition            : 13 19 21 21 22 22
empty                : 14 16 20 45 52
group_by_clause_opt  : 1
group_list           : 15 18
having_clause_opt    : 1
limit_clause_opt     : 1
literal              : 30 31 32 32 33 34
literal_list         : 34 35
operator             : 30 31
order_by_clause_opt  : 1
order_item           : 46 47
order_list           : 44 47
query                : 0
select_list          : 1
where_clause_opt     : 1

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . SELECT select_list FROM IDENTIFIER where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON

    SELECT          shift and go to state 2

    query                          shift and go to state 1

state 1

    (0) S' -> query .



state 2

    (1) query -> SELECT . select_list FROM IDENTIFIER where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
    (2) select_list -> . STAR
    (3) select_list -> . column_list
    (4) column_list -> . column
    (5) column_list -> . column_list COMMA column
    (6) column -> . IDENTIFIER
    (7) column -> . COUNT LPAREN STAR RPAREN
    (8) column -> . COUNT LPAREN IDENTIFIER RPAREN
    (9) column -> . MIN LPAREN IDENTIFIER RPAREN
    (10) column -> . MAX LPAREN IDENTIFIER RPAREN
    (11) column -> . AVG LPAREN IDENTIFIER RPAREN
    (12) column -> . SUM LPAREN IDENTIFIER RPAREN

    STAR            shift and go to state 5
    IDENTIFIER      shift and go to state 4
    COUNT           shift and go to state 8
    MIN             shift and go to state 9
    MAX             shift and go to state 10
    AVG             shift and go to state 11
    SUM             shift and go to state 12

    select_list                    shift and go to state 3
    column_list                    shift and go to state 6
    column                         shift and go to state 7

state 3

    (1) query -> SELECT select_list . FROM IDENTIFIER where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON

    FROM            shift and go to state 13


state 4

    (6) column -> IDENTIFIER .

    COMMA           reduce using rule 6 (column -> IDENTIFIER .)
    FROM            reduce using rule 6 (column -> IDENTIFIER .)


state 5

    (2) select_list -> STAR .

    FROM            reduce using rule 2 (select_list -> STAR .)


state 6

    (3) select_list -> column_list .
    (5) column_list -> column_list . COMMA column

    FROM            reduce using rule 3 (select_list -> column_list .)
    COMMA           shift and go to state 14


state 7

    (4) column_list -> column .

    COMMA           reduce using rule 4 (column_list -> column .)
    FROM            reduce using rule 4 (column_list -> column .)


state 8

    (7) column -> COUNT . LPAREN STAR RPAREN
    (8) column -> COUNT . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 15


state 9

    (9) column -> MIN . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 16


state 10

    (10) column -> MAX . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 17


state 11

    (11) column -> AVG . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 18


state 12

    (12) column -> SUM . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 19


state 13

    (1) query -> SELECT select_list FROM . IDENTIFIER where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON

    IDENTIFIER      shift and go to state 20


state 14

    (5) column_list -> column_list COMMA . column
    (6) column -> . IDENTIFIER
    (7) column -> . COUNT LPAREN STAR RPAREN
    (8) column -> . COUNT LPAREN IDENTIFIER RPAREN
    (9) column -> . MIN LPAREN IDENTIFIER RPAREN
    (10) column -> . MAX LPAREN IDENTIFIER RPAREN
    (11) column -> . AVG LPAREN IDENTIFIER RPAREN
    (12) column -> . SUM LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 4
    COUNT           shift and go to state 8
    MIN             shift and go to state 9
    MAX             shift and go to state 10
    AVG             shift and go to state 11
    SUM             shift and go to state 12

    column                         shift and go to state 21

state 15

    (7) column -> COUNT LPAREN . STAR RPAREN
    (8) column -> COUNT LPAREN . IDENTIFIER RPAREN

    STAR            shift and go to state 22
    IDENTIFIER      shift and go to state 23


state 16

    (9) column -> MIN LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 24


state 17

    (10) column -> MAX LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 25


state 18

    (11) column -> AVG LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 26


state 19

    (12) column -> SUM LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 27


state 20

    (1) query -> SELECT select_list FROM IDENTIFIER . where_clause_opt group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
    (13) where_clause_opt -> . WHERE condition
    (14) where_clause_opt -> . empty
    (53) empty -> .

    WHERE           shift and go to state 29
    GROUP           reduce using rule 53 (empty -> .)
    HAVING          reduce using rule 53 (empty -> .)
    ORDER           reduce using rule 53 (empty -> .)
    LIMIT           reduce using rule 53 (empty -> .)
    SEMICOLON       reduce using rule 53 (empty -> .)

    where_clause_opt               shift and go to state 28
    empty                          shift and go to state 30

state 21

    (5) column_list -> column_list COMMA column .

    COMMA           reduce using rule 5 (column_list -> column_list COMMA column .)
    FROM            reduce using rule 5 (column_list -> column_list COMMA column .)


state 22

    (7) column -> COUNT LPAREN STAR . RPAREN

    RPAREN          shift and go to state 31


state 23

    (8) column -> COUNT LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 32


state 24

    (9) column -> MIN LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 33


state 25

    (10) column -> MAX LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 34


state 26

    (11) column -> AVG LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 35


state 27

    (12) column -> SUM LPAREN IDENTIFIER . RPAREN

    RPAREN          shift and go to state 36


state 28

    (1) query -> SELECT select_list FROM IDENTIFIER where_clause_opt . group_by_clause_opt having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
    (15) group_by_clause_opt -> . GROUP BY group_list
    (16) group_by_clause_opt -> . empty
    (53) empty -> .

    GROUP           shift and go to state 38
    HAVING          reduce using rule 53 (empty -> .)
    ORDER           reduce using rule 53 (empty -> .)
    LIMIT           reduce using rule 53 (empty -> .)
    SEMICOLON       reduce using rule 53 (empty -> .)

    group_by_clause_opt            shift and go to state 37
    empty                          shift and go to state 39

state 29

    (13) where_clause_opt -> WHERE . condition
    (21) condition -> . condition AND condition
    (22) condition -> . condition OR condition
    (23) condition -> . comparison
    (30) comparison -> . IDENTIFIER operator literal
    (31) comparison -> . aggregate_expr operator literal
    (32) comparison -> . IDENTIFIER BETWEEN literal AND literal
    (35) comparison -> . IDENTIFIER IN LPAREN literal_list RPAREN
    (24) aggregate_expr -> . COUNT LPAREN STAR RPAREN
    (25) aggregate_expr -> . COUNT LPAREN IDENTIFIER RPAREN
    (26) aggregate_expr -> . MIN LPAREN IDENTIFIER RPAREN
    (27) aggregate_expr -> . MAX LPAREN IDENTIFIER RPAREN
    (28) aggregate_expr -> . AVG LPAREN IDENTIFIER RPAREN
    (29) aggregate_expr -> . SUM LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 42
    COUNT           shift and go to state 44
    MIN             shift and go to state 45
    MAX             shift and go to state 46
    AVG             shift and go to state 47
    SUM             shift and go to state 48

    condition                      shift and go to state 40
    comparison                     shift and go to state 41
    aggregate_expr                 shift and go to state 43

state 30

    (14) where_clause_opt -> empty .

    GROUP           reduce using rule 14 (where_clause_opt -> empty .)
    HAVING          reduce using rule 14 (where_clause_opt -> empty .)
    ORDER           reduce using rule 14 (where_clause_opt -> empty .)
    LIMIT           reduce using rule 14 (where_clause_opt -> empty .)
    SEMICOLON       reduce using rule 14 (where_clause_opt -> empty .)


state 31

    (7) column -> COUNT LPAREN STAR RPAREN .

    COMMA           reduce using rule 7 (column -> COUNT LPAREN STAR RPAREN .)
    FROM            reduce using rule 7 (column -> COUNT LPAREN STAR RPAREN .)


state 32

    (8) column -> COUNT LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 8 (column -> COUNT LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 8 (column -> COUNT LPAREN IDENTIFIER RPAREN .)


state 33

    (9) column -> MIN LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 9 (column -> MIN LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 9 (column -> MIN LPAREN IDENTIFIER RPAREN .)


state 34

    (10) column -> MAX LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 10 (column -> MAX LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 10 (column -> MAX LPAREN IDENTIFIER RPAREN .)


state 35

    (11) column -> AVG LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 11 (column -> AVG LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 11 (column -> AVG LPAREN IDENTIFIER RPAREN .)


state 36

    (12) column -> SUM LPAREN IDENTIFIER RPAREN .

    COMMA           reduce using rule 12 (column -> SUM LPAREN IDENTIFIER RPAREN .)
    FROM            reduce using rule 12 (column -> SUM LPAREN IDENTIFIER RPAREN .)


state 37

    (1) query -> SELECT select_list FROM IDENTIFIER where_clause_opt group_by_clause_opt . having_clause_opt order_by_clause_opt limit_clause_opt SEMICOLON
    (19) having_clause_opt -> . HAVING condition
    (20) having_clause_opt -> . empty
    (53) empty -> .

    HAVING          shift and go to state 50
    ORDER           reduce using rule 53 (empty -> .)
    LIMIT           reduce using rule 53 (empty -> .)
    SEMICOLON       reduce using rule 53 (empty -> .)

    having_clause_opt              shift and go to state 49
    empty                          shift and go to state 51

state 38

    (15) group_by_clause_opt -> GROUP . BY group_list

    BY              shift and go to state 52


state 39

    (16) group_by_clause_opt -> empty .

    HAVING          reduce using rule 16 (group_by_clause_opt -> empty .)
    ORDER           reduce using rule 16 (group_by_clause_opt -> empty .)
    LIMIT           reduce using rule 16 (group_by_clause_opt -> empty .)
    SEMICOLON       reduce using rule 16 (group_by_clause_opt -> empty .)


state 40

    (13) where_clause_opt -> WHERE condition .
    (21) condition -> condition . AND condition
    (22) condition -> condition . OR condition

    GROUP           reduce using rule 13 (where_clause_opt -> WHERE condition .)
    HAVING          reduce using rule 13 (where_clause_opt -> WHERE condition .)
    ORDER           reduce using rule 13 (where_clause_opt -> WHERE condition .)
    LIMIT           reduce using rule 13 (where_clause_opt -> WHERE condition .)
    SEMICOLON       reduce using rule 13 (where_clause_opt -> WHERE condition .)
    AND             shift and go to state 53
    OR              shift and go to state 54


state 41

    (23) condition -> comparison .

    AND             reduce using rule 23 (condition -> comparison .)
    OR              reduce using rule 23 (condition -> comparison .)
    GROUP           reduce using rule 23 (condition -> comparison .)
    HAVING          reduce using rule 23 (condition -> comparison .)
    ORDER           reduce using rule 23 (condition -> comparison .)
    LIMIT           reduce using rule 23 (condition -> comparison .)
    SEMICOLON       reduce using rule 23 (condition -> comparison .)


state 42

    (30) comparison -> IDENTIFIER . operator literal
    (32) comparison -> IDENTIFIER . BETWEEN literal AND literal
    (35) comparison -> IDENTIFIER . IN LPAREN literal_list RPAREN
    (36) operator -> . EQ
    (37) operator -> . NE
    (38) operator -> . GT
    (39) operator -> . LT
    (40) operator -> . GE
    (41) operator -> . LE

    BETWEEN         shift and go to state 56
    IN              shift and go to state 57
    EQ              shift and go to state 58
    NE              shift and go to state 59
    GT              shift and go to state 60
    LT              shift and go to state 61
    GE              shift and go to state 62
    LE              shift and go to state 63

    operator                       shift and go to state 55

state 43

    (31) comparison -> aggregate_expr . operator literal
    (36) operator -> . EQ
    (37) operator -> . NE
    (38) operator -> . GT
    (39) operator -> . LT
    (40) operator -> . GE
    (41) operator -> . LE

    EQ              shift and go to state 58
    NE              shift and go to state 59
    GT              shift and go to state 60
    LT              shift and go to state 61
    GE              shift and go to state 62
    LE              shift and go to state 63

    operator                       shift and go to state 64

state 44

    (24) aggregate_expr -> COUNT . LPAREN STAR RPAREN
    (25) aggregate_expr -> COUNT . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 65


state 45

    (26) aggregate_expr -> MIN . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 66


state 46

    (27) aggregate_expr -> MAX . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 67


state 47

    (28) aggregate_expr -> AVG . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 68


state 48

    (29) aggregate_expr -> SUM . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 69


state 49

    (1) query -> SELECT select_list FROM IDENTIFIER where_clause_opt group_by_clause_opt having_clause_opt . order_by_clause_opt limit_clause_opt SEMICOLON
    (44) order_by_clause_opt -> . ORDER BY order_list
    (45) order_by_clause_opt -> . empty
    (53) empty -> .

    ORDER           shift and go to state 71
    LIMIT           reduce using rule 53 (empty -> .)
    SEMICOLON       reduce using rule 53 (empty -> .)

    order_by_clause_opt            shift and go to state 70
    empty                          shift and go to state 72

state 50

    (19) having_clause_opt -> HAVING . condition
    (21) condition -> . condition AND condition
    (22) condition -> . condition OR condition
    (23) condition -> . comparison
    (30) comparison -> . IDENTIFIER operator literal
    (31) comparison -> . aggregate_expr operator literal
    (32) comparison -> . IDENTIFIER BETWEEN literal AND literal
    (35) comparison -> . IDENTIFIER IN LPAREN literal_list RPAREN
    (24) aggregate_expr -> . COUNT LPAREN STAR RPAREN
    (25) aggregate_expr -> . COUNT LPAREN IDENTIFIER RPAREN
    (26) aggregate_expr -> . MIN LPAREN IDENTIFIER RPAREN
    (27) aggregate_expr -> . MAX LPAREN IDENTIFIER RPAREN
    (28) aggregate_expr -> . AVG LPAREN IDENTIFIER RPAREN
    (29) aggregate_expr -> . SUM LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 42
    COUNT           shift and go to state 44
    MIN             shift and go to state 45
    MAX             shift and go to state 46
    AVG             shift and go to state 47
    SUM             shift and go to state 48

    condition                      shift and go to state 73
    comparison                     shift and go to state 41
    aggregate_expr                 shift and go to state 43

state 51

    (20) having_clause_opt -> empty .

    ORDER           reduce using rule 20 (having_clause_opt -> empty .)
    LIMIT           reduce using rule 20 (having_clause_opt -> empty .)
    SEMICOLON       reduce using rule 20 (having_clause_opt -> empty .)


state 52

    (15) group_by_clause_opt -> GROUP BY . group_list
    (17) group_list -> . IDENTIFIER
    (18) group_list -> . group_list COMMA IDENTIFIER

    IDENTIFIER      shift and go to state 75

    group_list                     shift and go to state 74

state 53

    (21) condition -> condition AND . condition
    (21) condition -> . condition AND condition
    (22) condition -> . condition OR condition
    (23) condition -> . comparison
    (30) comparison -> . IDENTIFIER operator literal
    (31) comparison -> . aggregate_expr operator literal
    (32) comparison -> . IDENTIFIER BETWEEN literal AND literal
    (35) comparison -> . IDENTIFIER IN LPAREN literal_list RPAREN
    (24) aggregate_expr -> . COUNT LPAREN STAR RPAREN
    (25) aggregate_expr -> . COUNT LPAREN IDENTIFIER RPAREN
    (26) aggregate_expr -> . MIN LPAREN IDENTIFIER RPAREN
    (27) aggregate_expr -> . MAX LPAREN IDENTIFIER RPAREN
    (28) aggregate_expr -> . AVG LPAREN IDENTIFIER RPAREN
    (29) aggregate_expr -> . SUM LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 42
    COUNT           shift and go to state 44
    MIN             shift and go to state 45
    MAX             shift and go to state 46
    AVG             shift and go to state 47
    SUM             shift and go to state 48

    condition                      shift and go to state 76
    comparison                     shift and go to state 41
    aggregate_expr                 shift and go to state 43

state 54

    (22) condition -> condition OR . condition
    (21) condition -> . condition AND condition
    (22) condition -> . condition OR condition
    (23) condition -> . comparison
    (30) comparison -> . IDENTIFIER operator literal
    (31) comparison -> . aggregate_expr operator literal
    (32) comparison -> . IDENTIFIER BETWEEN literal AND literal
    (35) comparison -> . IDENTIFIER IN LPAREN literal_list RPAREN
    (24) aggregate_expr -> . COUNT LPAREN STAR RPAREN
    (25) aggregate_expr -> . COUNT LPAREN IDENTIFIER RPAREN
    (26) aggregate_expr -> . MIN LPAREN IDENTIFIER RPAREN
    (27) aggregate_expr -> . MAX LPAREN IDENTIFIER RPAREN
    (28) aggregate_expr -> . AVG LPAREN IDENTIFIER RPAREN
    (29) aggregate_expr -> . SUM LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 42
    COUNT           shift and go to state 44
    MIN             shift and go to state 45
    MAX             shift and go to state 46
    AVG             shift and go to state 47
    SUM             shift and go to state 48

    condition                      shift and go to state 77
    comparison                     shift and go to state 41
    aggregate_expr                 shift and go to state 43

state 55

    (30) comparison -> IDENTIFIER operator . literal
    (42) literal -> . NUMBER
    (43) literal -> . STRING

    NUMBER          shift and go to state 79
    STRING          shift and go to state 80

    literal                        shift and go to state 78

state 56

    (32) comparison -> IDENTIFIER BETWEEN . literal AND literal
    (42) literal -> . NUMBER
    (43) literal -> . STRING

    NUMBER          shift and go to state 79
    STRING          shift and go to state 80

    literal                        shift and go to state 81

state 57

    (35) comparison -> IDENTIFIER IN . LPAREN literal_list RPAREN

    LPAREN          shift and go to state 82


state 58

    (36) operator -> EQ .

    NUMBER          reduce using rule 36 (operator -> EQ .)
    STRING          reduce using rule 36 (operator -> EQ .)


state 59

    (37) operator -> NE .

    NUMBER          reduce using rule 37 (operator -> NE .)
    STRING          reduce using rule 37 (operator -> NE .)


state 60

    (38) operator -> GT .

    NUMBER          reduce using rule 38 (operator -> GT .)
    STRING          reduce using rule 38 (operator -> GT .)


state 61

    (39) operator -> LT .

    NUMBER          reduce using rule 39 (operator -> LT .)
    STRING          reduce using rule 39 (operator -> LT .)


state 62

    (40) operator -> GE .

    NUMBER          reduce using rule 40 (operator -> GE .)
    STRING          reduce using rule 40 (operator -> GE .)


state 63

    (41) operator -> LE .

    NUMBER          reduce using rule 41 (operator -> LE .)
    STRING          reduce using rule 41 (operator -> LE .)


state 64

    (31) comparison -> aggregate_expr operator . literal
    (42) literal -> . NUMBER
    (43) literal -> . STRING
